Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPW/rhteRDepmUI8GiTcurK",
+      "authorship_tag": "ABX9TyO/erec8NzcmZmFowN/tiNs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,23 +196,54 @@
     {
       "cell_type": "code",
       "source": [
-        "# シェルの echo の出力をパイプ `|` で受ける、標準入力\n",
-        "!echo -e 'this is a pen' | ghc -e \"getContents >>= putStrLn\""
+        "!ghc -e ':t getContents'\n",
+        "!ghc -e ':t interact'"
       ],
       "metadata": {
-        "id": "z25E2X5cjh2Y",
-        "outputId": "a87fdfff-79c4-494c-9b9a-88ce639bf36a",
+        "id": "Nfqb4Dx_RWfj",
+        "outputId": "7dc7ef71-69c7-4839-83a2-fb948b24d59c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "getContents :: IO String\n",
+            "interact :: (String -> String) -> IO ()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# シェルの echo の出力をパイプ `|` で受ける、標準入力\n",
+        "!echo -e 'this is a pen' | ghc -e \"getContents >>= print\"\n",
+        "!echo -e 'this is a pen' | ghc -e \"getContents >>= putStrLn\"\n",
+        "!echo -e 'this is\\na pen' | ghc -e \"getContents >>= putStrLn\""
+      ],
+      "metadata": {
+        "id": "z25E2X5cjh2Y",
+        "outputId": "dcf15392-755f-4366-b397-b02f5c6e206c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\"this is a pen\\n\"\n",
             "this is a pen\n",
+            "\n",
+            "this is \n",
+            "a pen\n",
             "\n"
           ]
         }
@@ -225,17 +255,16 @@
         "# 実験 \n",
         "%%writefile temp.hs\n",
         "main = do\n",
-        "    input <- getContents\n",
-        "    print $ lines input"
+        "    getContents >>= print.lines "
       ],
       "metadata": {
         "id": "OrNnuvmjU1I4",
-        "outputId": "e2ab2932-2ac5-45d7-ca86-06ed921d4c38",
+        "outputId": "584cfed7-6fd7-4bf1-f865-eed62c7efd54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,22 +278,22 @@
     {
       "cell_type": "code",
       "source": [
-        "!echo -e '[1 (2) 3,4 [8]]' | runghc temp.hs"
+        "!echo -e '[1 (2) \\n3,4 [8]]' | runghc temp.hs"
       ],
       "metadata": {
         "id": "QBHJzQkdU5rO",
-        "outputId": "c1056ed5-3d40-4b56-d756-a4f591abe550",
+        "outputId": "91446637-3534-4a41-c829-342cc2c9922e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[\"[1 (2) 3,4 [8]]\"]\n"
+            "[\"[1 (2) \",\"3,4 [8]]\"]\n"
           ]
         }
       ]
@@ -278,12 +307,12 @@
       ],
       "metadata": {
         "id": "5sj4d1FzM7gn",
-        "outputId": "850a491f-d9f6-4267-b206-c01b82c6a703",
+        "outputId": "f0bfc26e-fe15-4e81-8543-0964d8efc9f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,12 +330,12 @@
       ],
       "metadata": {
         "id": "kQr1QwKNNcEd",
-        "outputId": "7129935b-29a2-463b-d8b0-f6c2cc32c384",
+        "outputId": "8c156352-1804-4600-b6b7-97d9db31856d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
