--- a/linear_sawada.ipynb
+++ b/linear_sawada.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_sawada.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMteKbmj1z1LSVsIoWzH7FS",
+      "authorship_tag": "ABX9TyMyeWpNhru30wQJWWGmu+ij",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,11 @@
         "id": "RA8wguI6B-aR"
       },
       "source": [
-        "# メモ\r\n",
-        "\r\n",
-        "大学で学ぶ線形代数 沢田賢,渡辺展也,安原晃\r\n",
-        "\r\n",
-        "を読む。\r\n"
+        "# メモ\n",
+        "\n",
+        "大学で学ぶ線形代数 沢田賢,渡辺展也,安原晃\n",
+        "\n",
+        "を読む。\n"
       ]
     },
     {
@@ -43,44 +43,36 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 251
+          "height": 286
         },
         "id": "XZwTRqEWCZpN",
-        "outputId": "760d7739-9da0-4271-e32b-6648f8c222ad"
+        "outputId": "e317f631-2b02-410c-92d8-b7ed8b803b3e"
       },
       "source": [
-        "%%latex\r\n",
-        "座標平面上の点 ~A=(1,2)~ \\\\[0.8em]\r\n",
-        "\r\n",
-        "(a, b)  \\\\[0.8em]\r\n",
-        "\r\n",
-        "(a_1,a_2,a_3,a_4,a_5,a_6,a_7,a_8) \\\\[0.8em]\r\n",
-        "\r\n",
-        "添え字という。 \\\\[0.8em]\r\n",
-        "\r\n",
-        "(a_1,a_2,\\cdots, a_n) \\\\[0.8em]\r\n",
-        "\r\n",
-        "\\begin{matrix}\r\n",
-        "3 & 10 & 18 & 3\\\\\r\n",
-        "1 & 2 & 2 & 8\\\\\r\n",
-        "8 & 1 & 8 & 0\r\n",
-        "\\end{matrix} \\\\[0.8em]\r\n",
-        "\r\n",
-        "横の並びを行、縦の並びを列と呼ぶ。"
+        "%%latex\n",
+        "座標平面上の点 ~A=(1,2)~ \\\\[0.8em]\n",
+        "(a, b)  \\\\[0.8em]\n",
+        "(a_1,a_2,a_3,a_4,a_5,a_6,a_7,a_8) \\\\[0.8em]\n",
+        "添え字という \\\\[0.8em]\n",
+        "(a_1,a_2,\\cdots, a_n) \\\\[0.8em]\n",
+        "\\begin{matrix}\n",
+        "3 & 10 & 18 & 3\\\\\n",
+        "1 & 2 & 2 & 8\\\\\n",
+        "8 & 1 & 8 & 0\n",
+        "\\end{matrix} \\\\[0.8em]\n",
+        "横の並びを行、縦の並びを列と呼ぶ"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "座標平面上の点 ~A=(1,2)~ \\\\[0.8em]\n\n(a, b)  \\\\[0.8em]\n\n(a_1,a_2,a_3,a_4,a_5,a_6,a_7,a_8) \\\\[0.8em]\n\n添え字という。 \\\\[0.8em]\n\n(a_1,a_2,\\cdots, a_n) \\\\[0.8em]\n\n\\begin{matrix}\n3 & 10 & 18 & 3\\\\\n1 & 2 & 2 & 8\\\\\n8 & 1 & 8 & 0\n\\end{matrix}",
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ]
+            ],
+            "text/latex": "座標平面上の点 ~A=(1,2)~ \\\\[0.8em]\n(a, b)  \\\\[0.8em]\n(a_1,a_2,a_3,a_4,a_5,a_6,a_7,a_8) \\\\[0.8em]\n添え字という。 \\\\[0.8em]\n(a_1,a_2,\\cdots, a_n) \\\\[0.8em]\n\\begin{matrix}\n3 & 10 & 18 & 3\\\\\n1 & 2 & 2 & 8\\\\\n8 & 1 & 8 & 0\n\\end{matrix} \\\\[0.8em]\n横の並びを行、縦の並びを列と呼ぶ。"
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -95,17 +87,16 @@
         }
       },
       "source": [
-        "%%latex\r\n",
-        "行列 \\\\[0.8em]\r\n",
-        "\r\n",
-        "\\begin{pmatrix}\r\n",
-        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
-        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
-        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
-        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\r\n",
+        "%%latex\n",
+        "行列 \\\\[0.8em]\n",
+        "\\begin{pmatrix}\n",
+        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n",
+        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "    a_{m1} & a_{m2} & \\ldots & a_{mn}\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -132,12 +123,11 @@
         }
       },
       "source": [
-        "%%latex\r\n",
-        "m \\times n~行列という。 成分を~(i,j)~成分という。\\\\[0.8em]\r\n",
-        "\r\n",
+        "%%latex\n",
+        "m \\times n~行列という。 成分を~(i,j)~成分という。\\\\[0.8em]\n",
         "行列の名前は~A,B,C, \\cdots~などのアルファベットの大文字を用いる。"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -164,18 +154,18 @@
         }
       },
       "source": [
-        "%%latex\r\n",
-        "各成分がすべての~0~の行列を零行列といい、~O~で表す。\r\n",
-        "\\\\[0.8em]\r\n",
-        "\\quad \\quad \\quad \\quad \r\n",
-        "O_{3 \\times 4} =\r\n",
-        "\\begin{pmatrix}\r\n",
-        "    0 & 0 & 0 & 0 \\\\\r\n",
-        "    0 & 0 & 0 & 0 \\\\\r\n",
-        "    0 & 0 & 0 & 0 \r\n",
-        "\\end{pmatrix}\r\n"
+        "%%latex\n",
+        "各成分がすべての~0~の行列を零行列といい、~O~で表す。\n",
+        "\\\\[0.8em]\n",
+        "\\quad \\quad \\quad \\quad \n",
+        "O_{3 \\times 4} =\n",
+        "\\begin{pmatrix}\n",
+        "    0 & 0 & 0 & 0 \\\\\n",
+        "    0 & 0 & 0 & 0 \\\\\n",
+        "    0 & 0 & 0 & 0 \n",
+        "\\end{pmatrix}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -202,19 +192,19 @@
         }
       },
       "source": [
-        "%%latex\r\n",
-        "行の個数と列の個数が同じ行列、つまり~n \\times n~行列を~n~次正方行列という。\\\\[0.8em]\r\n",
-        "\r\n",
-        "\\begin{pmatrix}\r\n",
-        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\r\n",
-        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\r\n",
-        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\r\n",
-        "    a_{n1} & a_{n2} & \\ldots & a_{nn}\r\n",
-        "\\end{pmatrix}\\\\[0.8em]\r\n",
-        "\r\n",
+        "%%latex\n",
+        "行の個数と列の個数が同じ行列、つまり~n \\times n~行列を~n~次正方行列という。\\\\[0.8em]\n",
+        "\n",
+        "\\begin{pmatrix}\n",
+        "    a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n",
+        "    a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n",
+        "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "    a_{n1} & a_{n2} & \\ldots & a_{nn}\n",
+        "\\end{pmatrix}\\\\[0.8em]\n",
+        "\n",
         "において、a_{11},a_{22},\\cdots,a_{nn}~を正方行列の対角成分という。"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -241,19 +231,19 @@
         }
       },
       "source": [
-        "%%latex\r\n",
-        "~n~次製法行列で対角成分がすべて~1~、他の成分がすべて~0~となるものを \\\\\r\n",
-        "単位行列といい、~E_n~と表す。\r\n",
-        "\\\\[0.8em]\r\n",
-        "\r\n",
-        "E_3 =\r\n",
-        "\\begin{pmatrix}\r\n",
-        "    1 & 0 & 0 \\\\\r\n",
-        "    0 & 1 & 0 \\\\\r\n",
-        "    0 & 0 & 1\r\n",
+        "%%latex\n",
+        "~n~次製法行列で対角成分がすべて~1~、他の成分がすべて~0~となるものを \\\\\n",
+        "単位行列といい、~E_n~と表す。\n",
+        "\\\\[0.8em]\n",
+        "\n",
+        "E_3 =\n",
+        "\\begin{pmatrix}\n",
+        "    1 & 0 & 0 \\\\\n",
+        "    0 & 1 & 0 \\\\\n",
+        "    0 & 0 & 1\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -284,7 +274,7 @@
         "id": "3wI4f4t6jpJT"
       },
       "source": [
-        "from sympy import *\r\n"
+        "from sympy import *\n"
       ],
       "execution_count": null,
       "outputs": []
