Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOs06bXVwkfPFL/rFQczfYI",
+      "authorship_tag": "ABX9TyNz9ziNsk5P4wFaPEUduiJR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,8 +87,7 @@
         "outputId": "3fd52fa7-d699-4109-c451-1bf153a26829"
       },
       "source": [
-        "# シェルでコマンドラインワンライナーを実行する\n",
-        "# haskell のインタラクティブ環境 ghci の代わりに使う\n",
+        "# シェルでコマンドラインワンライナーで実行することが出来る\n",
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
       "execution_count": null,
@@ -108,7 +107,7 @@
         "id": "Ba2HY_gpTx4I"
       },
       "source": [
-        "# プログラムファイルを作って、次のセルで実行する\n",
+        "# プログラムファイルを作って、次のセルで実行することができる\n",
         "%%writefile temp.hs\n",
         "main = putStrLn \"hello, world\""
       ],
@@ -228,6 +227,7 @@
         "%%writefile temp.hs\n",
         "main = do\n",
         "    input <- getContents\n",
+        "    print input\n",
         "    print $ lines input\n",
         "    print $ map reverse.lines $ input\n",
         "    mapM_ print.map reverse.lines $ input -- IO を map する時は mapM_ を使う\n",
@@ -239,9 +239,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8f4VgNnrZeq",
-        "outputId": "71ed06d7-42ec-4fbe-c9a2-312c96d44ff7"
+        "outputId": "658a7b6d-d59f-4b6f-a55e-b85e873b3825"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,10 +258,31 @@
         "!echo -e 'abcd\\n12 34' | runghc temp.hs"
       ],
       "metadata": {
-        "id": "vAiwNilExSo2"
+        "id": "vAiwNilExSo2",
+        "outputId": "220d28ae-a3e8-4a70-8d7c-82224cc54c24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\"abcd\\n12 34\\n\"\n",
+            "[\"abcd\",\"12 34\"]\n",
+            "[\"dcba\",\"43 21\"]\n",
+            "\"dcba\"\n",
+            "\"43 21\"\n",
+            "dcba\n",
+            "43 21\n",
+            "dcba\n",
+            "21\n",
+            "43\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -316,12 +337,12 @@
       ],
       "metadata": {
         "id": "oWPt8X1NTjny",
-        "outputId": "ab450c80-8c38-4963-d81d-a954a13ae923",
+        "outputId": "d7ab12c2-1a12-4fdb-a6a0-d5463ad67849",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,12 +360,12 @@
       ],
       "metadata": {
         "id": "avOQM44xTjbS",
-        "outputId": "b165f1fe-ba25-4571-ba45-59d822323588",
+        "outputId": "ea20de8d-ddc8-4bf2-bbc6-384b3f83805c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +433,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4d57986-a8be-4982-d158-cb33f33ccb37"
+        "outputId": "4bae8677-c907-4a63-d0f5-d23dbb272009"
       },
       "source": [
         "# print は引数をそのまま出力する\n",
@@ -422,13 +443,13 @@
         "  print \"Haskell\\nand\\nPython\"  \n",
         "  putStrLn \"Haskell\\nand\\nPython\"  "
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.hs\n"
+            "Overwriting temp.hs\n"
           ]
         }
       ]
@@ -440,12 +461,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ea410bc-9a5d-421e-dfe1-e8ddd13cb07d"
+        "outputId": "ed1ac9b4-b17f-4f96-d90b-5117ae1ccb6e"
       },
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,14 +487,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4916dcd9-edde-4960-a430-d14f235a3415"
+        "outputId": "d3ee7944-72de-4656-e1da-344ade9735d0"
       },
       "source": [
         "# 数字を直接 putStrLn の引数にするとエラーになるので show で文字列に変換する\n",
         "# show の反対は read で read は文字列を数値にする\n",
         "!ghc -e 'putStrLn(show(32))'"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,6 +515,7 @@
         "outputId": "d99d24f0-5535-48fe-ae99-fc8d9df47e91"
       },
       "source": [
+        "# 実験\n",
         "!ghc -e 'print 32'\n",
         "!ghc -e 'print (32, 18)'\n",
         "!ghc -e 'print (32*18)'\n",
@@ -549,7 +571,8 @@
       "cell_type": "code",
       "source": [
         "# Haskell は関数のカッコは省略可能だが、場合によっては必要\n",
-        "# `$` による省略も便利なので使うが、エラーの原因にもなる"
+        "# `$` による省略も便利なので使うが、エラーの原因にもなる\n",
+        "# 基本は括弧"
       ],
       "metadata": {
         "id": "1hE1az0p-JCH"
@@ -564,7 +587,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b8656508-d78e-44dd-924f-54f23095c0ec"
+        "outputId": "7b06ac3c-a25f-40aa-bb78-de320ab79716"
       },
       "source": [
         "%%writefile temp.hs\n",
@@ -572,7 +595,7 @@
         "  let fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "  in print ( fac 42 )"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,7 +682,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 定義を外出しする\n",
+        "# 定義を外出しすると let が不要\n",
         "%%writefile temp.hs\n",
         "fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "\n",
@@ -746,6 +769,7 @@
         "%%writefile temp.hs\n",
         "fac 0 = 1  \n",
         "fac n = n * fac (n-1)  \n",
+        "\n",
         "main = print (fac 42)  "
       ],
       "execution_count": null,
@@ -919,6 +943,7 @@
       },
       "source": [
         "# 四則演算は割り算だけ気をつける\n",
+        "# 整数演算は `div` を使う\n",
         "%%writefile temp.hs\n",
         "main = do\n",
         "  print $ 3 * 5 \n",
@@ -1094,7 +1119,7 @@
         "outputId": "a50fa3e6-5588-4ae7-d89b-ccd9d1a84748"
       },
       "source": [
-        "# do \n",
+        "# 四捨五入など\n",
         "%%writefile temp.hs\n",
         "main =  do\n",
         "    print $ succ 5\n",
@@ -1177,10 +1202,10 @@
         "outputId": "27014bbe-8365-4f2b-db0c-9bae3eca61bc"
       },
       "source": [
-        "# ひとつの式の中で複数の I/O アクションを使いたい場合は、doブロックを使う\n",
+        "# ひとつの式の中で複数の I/O アクションを使いたい場合は、do ブロックを使う\n",
         "# アクションはセミコロンで区切る\n",
         "!ghc -e 'do {putStr \"2 + 2 = \"; print(2 + 2)}'\n",
-        "!ghc -e 'do { putStrLn \"ABCDE\" ; putStrLn \"12345\" }  '"
+        "!ghc -e 'do { putStrLn \"ABCDE\" ; putStrLn \"12345\" } '"
       ],
       "execution_count": null,
       "outputs": [
@@ -1240,7 +1265,7 @@
         "# map 関数とラムダ式(無名関数)\n",
         "!ghc -e 'map (\\x ->  x^2) [1..3]'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
