Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2z97flZWoNNr0vFUM+TuU",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN+NvMxrkAPTilChP7UZ5mC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +39,21 @@
     {
       "cell_type": "code",
       "source": [
+        "# cpp_algo_otsuki\n",
+        "# 問題 A さんの年齢は 20 .. 35。Yes/No で答えられる質問 4 回で当てることが出来るか\n",
+        "# 0 - 15 の 16 通りで考える \n",
+        "# 0..7, 8..15 => 0..3, 4..7 => 0..1, 2..3 => 4 回目の質問で 2 者択一になるので 4 回で当てられる \n",
+        "# これを二分探索法 binary search method と呼ぶ <=> 線形探索法 lienar search method"
+      ],
+      "metadata": {
+        "id": "ioGoXpMOLVo9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 28 の作り方\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -62,7 +78,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +125,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
