Colaboratory を使用して作成しました

--- a/math_en_wiki.ipynb
+++ b/math_en_wiki.ipynb
@@ -6,7 +6,7 @@
       "name": "math_en_wiki.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRwpjEpmRWfP3lthqGQhTw",
+      "authorship_tag": "ABX9TyMwfXvp6ym3ALX/wlAimOMh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -596,7 +596,7 @@
           "height": 37
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -628,7 +628,7 @@
           "height": 120
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -659,7 +659,7 @@
           "height": 100
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -691,7 +691,7 @@
           "height": 180
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -723,7 +723,7 @@
           "height": 196
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -754,7 +754,7 @@
           "height": 100
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -785,7 +785,7 @@
           "height": 100
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -816,7 +816,7 @@
           "height": 98
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -848,7 +848,7 @@
           "height": 119
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -857,6 +857,69 @@
               "<IPython.core.display.Latex object>"
             ],
             "text/latex": "62 × (8 – 6) \\\\\n8 + 6 × 32 \\\\\n32 / 23 + 4 \\\\\n8 + 32 / 16 \\\\\n6 +(4 / 2) 2 × 8 \\\\"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 変数 variable\n",
+        "# 項 term\n",
+        "%%latex\n",
+        "a, x, y, \\theta \\\\\n",
+        "3 + x \\\\"
+      ],
+      "metadata": {
+        "id": "4eajtWRHSnQU",
+        "outputId": "22fa0295-2baf-4453-bd62-0aab34675cf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "a, x, y, \\theta"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%latex\n",
+        "3x \\\\\n",
+        "5-y \\\\\n",
+        "2\\div s \\\\[0.8em]\n",
+        "\\displaystyle\n",
+        "\\frac {2}{s}"
+      ],
+      "metadata": {
+        "id": "MrlE0fXcVxta",
+        "outputId": "9e2e4c05-da20-4280-d55a-19ccde9d3cc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "3x \\\\\n5-y \\\\\n2\\div s \\\\[0.8em]\n\\displaystyle\n\\frac {2}{s} \\\\"
           },
           "metadata": {}
         }
@@ -874,28 +937,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# 変数 variable\n",
-        " is a letter or symbol that takes place of a number in Algebra.\n",
-        "  Common symbols used are {\\displaystyle a}a, {\\displaystyle x}x, \n",
-        "  {\\displaystyle y}y, {\\displaystyle \\theta }\\theta  and\n",
-        "   {\\displaystyle \\lambda }\\lambda . The letters x and y are commonly \n",
-        "   used, but remember that any other symbols would work just as well.\n",
-        "\n",
-        "Variables are used in algebra as placeholders for unknown numbers. If you see \"3 + x\", don't panic! All this means is that we are adding a number who's value we don't yet know.\n",
-        "\n",
-        "Some examples of variables in use:\n",
-        "\n",
-        "{\\displaystyle 3x}{\\displaystyle 3x} -- three times of {\\displaystyle x}x.\n",
-        "{\\displaystyle 5-y}{\\displaystyle 5-y} -- five minus {\\displaystyle y}y\n",
-        "{\\displaystyle 2\\div s}{\\displaystyle 2\\div s} or {\\displaystyle {\\frac {2}{s}}}{\\displaystyle {\\frac {2}{s}}}-- 2 divided by {\\displaystyle s}s\n",
-        "A term is a number or a variable or a cluster of numbers and variables multiplied and or divided separated by addition and subtraction.\n",
-        "\n",
-        "Examples of terms:\n",
-        "\n",
+        "%%latex\n",
         "{\\displaystyle 3+5}{\\displaystyle 3+5} The terms are 3 and 5.\n",
-        "{\\displaystyle {\\frac {6}{x}}}{\\displaystyle {\\frac {6}{x}}} The term is {\\displaystyle 6/x}{\\displaystyle 6/x}, 6 over {\\displaystyle x}x is one term, because the operation is division.\n",
-        "{\\displaystyle 6x+5}{\\displaystyle 6x+5} The terms are 6{\\displaystyle x}x and 5, 6{\\displaystyle x}x and 5 are separate terms because they are separated by a addition or subtraction.\n",
-        "An operation is a thing you do to numbers, like add, subtract, multiply, or divide. You use signs like +, –, *, or / for operations.\n",
+        "{\\displaystyle {\\frac {6}{x}}}{\\displaystyle {\\frac {6}{x}}} \n",
+        "The term is {\\displaystyle 6/x}{\\displaystyle 6/x}, 6 over {\\displaystyle x}x is one term, because the operation is division.\n",
+        "{\\displaystyle 6x+5}{\\displaystyle 6x+5} \n",
+        "The terms are 6{\\displaystyle x}x and 5, 6{\\displaystyle x}x and 5 are separate terms because they are separated by a addition or subtraction.\n",
+        "An operation is a thing you do to numbers, like add, \n",
+        "subtract, multiply, or divide. You use signs like +, –, *, or / for operations.\n",
         "\n",
         "An expression is two or more terms, with operations between all terms.\n",
         "\n",
@@ -1031,7 +1080,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "4eajtWRHSnQU"
+        "id": "i6wttwqnV-4q"
       },
       "execution_count": null,
       "outputs": []
