Colaboratory を使用して作成しました

--- a/math_en_wiki.ipynb
+++ b/math_en_wiki.ipynb
@@ -6,7 +6,7 @@
       "name": "math_en_wiki.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP7FaoivWKCuUQIjKAk3Tri",
+      "authorship_tag": "ABX9TyOYmHZAsaf6lUVcz7rVI1I8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -879,7 +879,7 @@
         },
         "outputId": "2abf2840-1ba3-44db-a42b-ab4e955a59b3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -911,7 +911,7 @@
         "id": "MrlE0fXcVxta",
         "outputId": "9e2e4c05-da20-4280-d55a-19ccde9d3cc7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -924,15 +924,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "i075TnhyyTXL"
-      }
     },
     {
       "cell_type": "code",
@@ -952,7 +943,7 @@
         "id": "i6wttwqnV-4q",
         "outputId": "325db992-0d6e-44c6-c476-483d81101e8b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -970,29 +961,109 @@
       "cell_type": "code",
       "source": [
         "%%latex\n",
-        "3\\div 6}{\\displaystyle 3\\div 6}\n",
-        "{\\displaystyle 8\\times x}{\\displaystyle 8\\times x}\n",
-        "{\\displaystyle x\\times 6+y}{\\displaystyle x\\times 6+y}\n",
-        "{\\displaystyle a\\times b\\times c\\times d}{\\displaystyle a\\times b\\times c\\times d}\n",
-        "To evaluate an expression, you do the operations to the terms of an expression.\n",
-        "\n",
-        "Examples of evaluating expressions:\n",
-        "\n",
-        "{\\displaystyle 3+4}{\\displaystyle 3+4} evaluates to 7.\n",
-        "{\\displaystyle 18\\div 3}{\\displaystyle 18\\div 3} evaluates to 6.\n",
-        "{\\displaystyle 4\\times 5-3}{\\displaystyle 4\\times 5-3} evaluates to 17.\n",
-        "\n",
-        "To evaluate an expression with variables, you substitute (put a thing in the place of an other thing) numbers for the variables.\n",
-        "\n",
-        "Examples of substituting: (Substitute 3 for x in these examples.)\n",
-        "\n",
-        "{\\displaystyle x+4}{\\displaystyle x+4} is {\\displaystyle 3+4}{\\displaystyle 3+4}.\n",
-        "{\\displaystyle 18\\div x}{\\displaystyle 18\\div x} is {\\displaystyle 18\\div 3}{\\displaystyle 18\\div 3}.\n",
-        "{\\displaystyle 4\\times 5-x}{\\displaystyle 4\\times 5-x} is {\\displaystyle 4\\times 5-3}{\\displaystyle 4\\times 5-3}.\n",
-        "Example Problems\n",
-        "Evaluate the following expressions\n",
-        "\n",
-        "{\\displaystyle 5\\times x}{\\displaystyle 5\\times x}\n",
+        "3 \\div 6 \\\\\n",
+        "8 \\times x \\\\\n",
+        "x \\times 6+y \\\\\n",
+        "a \\times b \\times c \\times d \\\\"
+      ],
+      "metadata": {
+        "id": "BO1Nn56Y--G8",
+        "outputId": "0ce2c56a-bda3-473c-cc88-0a47d3ebd1f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "3 \\div 6 \\\\\n8 \\times x \\\\\nx \\times 6+y \\\\\na \\times b \\times c \\times d \\\\"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%latex\n",
+        "3+4 \\quad \\text{evaluates to} \\quad 7 \\\\\n",
+        "18 \\div 3 \\quad \\text{evaluates to} \\quad 6 \\\\\n",
+        "4 \\times 5-3 \\quad \\text{evaluates to} \\quad 17"
+      ],
+      "metadata": {
+        "id": "oa6KUHKZS85b",
+        "outputId": "fe71cb70-a5cc-4305-e0d5-db17d13ab35b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "3+4 \\quad \\text{evaluates to} \\quad 7 \\\\\n18 \\div 3 \\quad \\text{evaluates to} \\quad 6 \\\\\n4 \\times 5-3 \\quad \\text{evaluates to} \\quad 17"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Examples of substituting: (Substitute 3 for x in these examples.)\n",
+        "%%latex\n",
+        "x+4 \\quad \\text{is} \\quad 3+4 \\\\\n",
+        "18 \\div x \\quad \\text{is} \\quad 18 \\div 3 \\\\\n",
+        "4 \\times 5-x \\quad \\text{is} \\quad 4\\times 5-3"
+      ],
+      "metadata": {
+        "id": "pkWNaTNzTjRE",
+        "outputId": "fc62921d-b33c-47ee-c3ce-20e0dba33940",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 82
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "x+4 \\quad \\text{is} \\quad 3+4 \\\\\n18 \\div x \\quad \\text{is} \\quad 18 \\div 3 \\\\\n4 \\times 5-x \\quad \\text{is} \\quad 4\\times 5-3"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "i075TnhyyTXL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate the following expressions\n",
+        "%%latex\n",
+        "{\\displaystyle 5\\times x \\\\\n",
         "When {\\displaystyle x=2}{\\displaystyle x=2}\n",
         "{\\displaystyle 5\\times 2}{\\displaystyle 5\\times 2}\n",
         "Substitute 2 for {\\displaystyle x}x.\n",
@@ -1003,10 +1074,18 @@
         "{\\displaystyle {\\frac {9}{3}}+4}{\\displaystyle {\\frac {9}{3}}+4}\n",
         "Substitute 9 for {\\displaystyle x}x and substitute 4 for {\\displaystyle y}y.\n",
         "{\\displaystyle 7}7\n",
-        "Evaluate {\\displaystyle {\\frac {9}{3}}+4}{\\displaystyle {\\frac {9}{3}}+4} to get the answer.\n",
-        "Practice Games\n",
-        "Evaluating expressions\n",
-        "Advanced Expression Evaluator\n",
+        "Evaluate {\\displaystyle {\\frac {9}{3}}+4}{\\displaystyle {\\frac {9}{3}}+4} to get the answer."
+      ],
+      "metadata": {
+        "id": "F6qHChb0UFRh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "Practice Problems\n",
         "remember order of operations\n",
         "\n",
@@ -1100,7 +1179,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "BO1Nn56Y--G8"
+        "id": "7-QieCBCUuYZ"
       },
       "execution_count": null,
       "outputs": []
