Colaboratory を使用して作成しました

--- a/math_en_wiki.ipynb
+++ b/math_en_wiki.ipynb
@@ -6,7 +6,7 @@
       "name": "math_en_wiki.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0ho3V+o376r1skgjHbsXU",
+      "authorship_tag": "ABX9TyPlkle0YMN/jv9Uk5vf3sZU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1091,15 +1091,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "i075TnhyyTXL"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# Evaluate each expression if a = 1, b = 2, c = 3, and d = 5\n",
@@ -1152,12 +1143,12 @@
         "\\frac {2x}{2+y} \\\\[0.8em]"
       ],
       "metadata": {
-        "id": "6OswHLdl_nHF",
-        "outputId": "718bf6bb-9471-4c09-f1c4-35ef084128ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 329
-        }
+        },
+        "id": "6OswHLdl_nHF",
+        "outputId": "718bf6bb-9471-4c09-f1c4-35ef084128ba"
       },
       "execution_count": 5,
       "outputs": [
@@ -1186,12 +1177,12 @@
         "\\left({\\frac {6x}{2+y}}-z\\right)+\\left(x-{\\frac {z}{3}}\\right) \\\\[0.8em]"
       ],
       "metadata": {
-        "id": "gDHtVxvpAdrX",
-        "outputId": "c49a486d-66e5-45e6-c18d-6a004907cdbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        }
+        },
+        "id": "gDHtVxvpAdrX",
+        "outputId": "c49a486d-66e5-45e6-c18d-6a004907cdbc"
       },
       "execution_count": 6,
       "outputs": [
@@ -1208,20 +1199,85 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# いまここ"
       ],
       "metadata": {
-        "id": "C3N-pXnqBRZb"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "i075TnhyyTXL"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 負の数\n",
+        "7+(-4)=7-4\n",
+        "x+(-y)=x-y\n",
+        "\n",
+        "7-(-4)=7+4}7-(-4)=7+4}\n",
+        "x-(-y)=x+y}x-(-y)=x+y}\n",
+        "Multiplying and Dividing\n",
+        "Multiplying a negative number by a positive number, or a positive number by a negative number makes the result negative.\n",
+        "\n",
+        "(-2)\\times 3=-6}(-2)\\times 3=-6}\n",
+        "2\\times (-3)=-6}2\\times (-3)=-6}\n",
+        "Multiplying a negative number by a negative number makes the result positive.\n",
+        "\n",
+        "(-2)\\times (-3)=6}(-2)\\times (-3)=6}\n",
+        "You do the same for dividing.\n",
+        "\n",
+        "(-6)\\div 3=-2}(-6)\\div 3=-2}\n",
+        "6\\div (-3)=-2}6\\div (-3)=-2}\n",
+        "(-6)\\div (-3)=2}(-6)\\div (-3)=2}\n",
+        "Exponentiating\n",
+        "Exponentiating a negative number to an even (a number you can divide by two) power makes the result positive.\n",
+        "\n",
+        "(-3)^{2}=9}(-3)^{2}=9}\n",
+        "(-x)^{2}=(-x)\\times (-x)=x^{2}}(-x)^{2}=(-x)\\times (-x)=x^{2}}\n",
+        "Exponentiating a negative number to an odd (a number you can not divide by two) power makes the result negative.\n",
+        "\n",
+        "(-2)^{3}=-8}(-2)^{3}=-8}\n",
+        "(-x)^{3}=(-x)\\times (-x)\\times (-x)=x^{2}\\times (-x)=-x^{3}}(-x)^{3}=(-x)\\times (-x)\\times (-x)=x^{2}\\times (-x)=-x^{3}}\n",
+        "Order of Operations\n",
+        "The negative operation has the same precedence as multiplying and dividing.\n",
+        "\n",
+        "3+8\\div 4=3+2=5}3+8\\div 4=3+2=5}\n",
+        "-3^{2}=-(3\\times 3)=-9}-3^{2}=-(3\\times 3)=-9}\n",
+        "(-3)^{2}=(-3)\\times (-3)=9}(-3)^{2}=(-3)\\times (-3)=9}\n",
+        "Example Problems\n",
+        "4+(-4)=0}4+(-4)=0}\n",
+        "4+(-7)=-3}4+(-7)=-3}\n",
+        "0+(-2)=-2}0+(-2)=-2}\n",
+        "-5+7-2\\times (-4)=10}-5+7-2\\times (-4)=10}\n",
+        "Practice Games\n",
+        "Practice Problems\n",
+        "1\n",
+        "\n",
+        "6+(-3)=}6+(-3)=}\n",
+        "\n",
+        "2\n",
+        "\n",
+        "{\\displaystyle 3+(-9)=}{\\displaystyle 3+(-9)=}\n",
+        "\n",
+        "3\n",
+        "\n",
+        "{\\displaystyle -4\\times 4=}{\\displaystyle -4\\times 4=}\n",
+        "\n",
+        "4\n",
+        "\n",
+        "{\\displaystyle 4\\times (-9)=}{\\displaystyle 4\\times (-9)=}\n",
+        "\n",
+        "5\n",
+        "\n",
+        "{\\displaystyle -2\\times (-4)=}{\\displaystyle -2\\times (-4)=}\n",
+        "\n",
+        "6\n",
+        "\n",
+        "{\\displaystyle {\\frac {-25}{5^{2}}}=}{\\displaystyle {\\frac {-25}{5^{2}}}=}\n",
+        "\n",
+        "7\n",
+        "\n",
+        "{\\displaystyle -4\\div 2=}{\\displaystyle -4\\div 2=}"
       ],
       "metadata": {
         "id": "e--v46LfBRTe"
